--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "mode": "auto",
             "program": "${workspaceFolder}/main.go",
-            "args": ["-hosts", "127.0.0.1" ,"-log_level","DEBUG"],
+            "args": ["-hosts", "10.19.0.93" ,"-ports", "60000"],
         }
     ]
 }
